# new_Online_Store_Django

./: .env.sample  catalog.json  catalog_data.json  data_group.json  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_slug.py  0003_alter_blog_image_alter_blog_view_count.py  0004_alter_blog_image.py
blog/templates/blog/: blog_detail.html  blog_form.html  blog_list.html
blog/templatetags/: my_tags.py
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_product_manufactured_at.py  0002_rename_salary_product_price.py  0003_alter_product_created_at_alter_product_updated_at.py  0003_alter_product_manufactured_at.py  0004_alter_product_manufactured_at.py  0004_version.py  0005_alter_version_options.py  0006_product_is_active.py  0007_remove_product_is_active.py  0008_product_owner.py  0009_product_is_published.py  0010_alter_product_options.py
catalog/templates/catalog/: base.html  categories.html  contacts.html  product_confirm_delete.html  product_detail.html  product_details.html  product_form.html  product_info.html  product_list.html
catalog/templatetags/: my_tags.py
config/: settings.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py  0003_user_token.py  0004_alter_user_token.py
users/templates/users/: login.html  register.html  user_form.html  user_password_reset.html
(+2 files in other folders)
