[tool.poetry]
name = "new-online-store-django"
version = "0.1.0"
description = ""
authors = ["Andrew_Polik <polik.24@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.9"
pillow = "^10.2.0"
ipython = "^8.21.0"
pytils = "^0.4.1"
django = "4.2.2"
redis = "^5.0.3"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
